eserde/tests/integration/snapshots/eserde__tests__integration__contract.rs:struct_allow_unknown_fields~StructAllowUnknownFields.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Err(
    DeserializationErrors(
        [
            DeserializationError {
                path: Some(
                    Path {
                        segments: [],
                    },
                ),
                details: "missing field `write_only`",
            },
            DeserializationError {
                path: Some(
                    Path {
                        segments: [],
                    },
                ),
                details: "missing field `skip_serializing_if`",
            },
        ],
    ),
)
