eserde/tests/integration/snapshots/eserde__tests__integration__contract.rs:struct_deny_unknown_fields~StructDenyUnknownFields.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Err(
    DeserializationErrors(
        [
            DeserializationError {
                path: Some(
                    Path {
                        segments: [],
                    },
                ),
                details: "missing field `write_only`",
            },
        ],
    ),
)
