eserde/tests/integration/snapshots/eserde__tests__integration__contract.rs:tuple_struct~TupleStruct.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    TupleStruct(
        "XVUgTUKTJ7J8r",
        false,
        "yZwcp1Ge",
        "nf9hN3",
    ),
)
