eserde/tests/integration/snapshots/eserde__tests__integration__enum_repr.rs:enum_repr~Enum.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    Enum(
        Five,
    ),
)
