eserde/tests/integration/snapshots/eserde__tests__integration__enums.rs:adjacently_tagged_enum~Adjacent.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    Tuple(
        -427070648,
        true,
    ),
)
