eserde/tests/integration/snapshots/eserde__tests__integration__enums.rs:externally_tagged_enum~External.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    UnitStructNewType(
        UnitStruct,
    ),
)
