eserde/tests/integration/snapshots/eserde__tests__integration__enums.rs:renamed~Renamed.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    StructVariant {
        field: "8AtP50nUcNy1f",
    },
)
