eserde/tests/integration/snapshots/eserde__tests__integration__enums.rs:untagged_enum~UntaggedWrapper.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    UntaggedWrapper(
        StructNewType(
            Struct {
                foo: -521833035,
                bar: true,
            },
        ),
    ),
)
