eserde/tests/integration/snapshots/eserde__tests__integration__enums_deny_unknown_fields.rs:adjacently_tagged_enum~Adjacent.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    Struct {
        foo: 1566241236,
        bar: false,
    },
)
