eserde/tests/integration/snapshots/eserde__tests__integration__enums_deny_unknown_fields.rs:externally_tagged_enum~External.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    Struct {
        foo: 1899123746,
        bar: true,
    },
)
