eserde/tests/integration/snapshots/eserde__tests__integration__enums_deny_unknown_fields.rs:internally_tagged_enum~Internal.snap
---
source: test_helper/src/test_helper.rs
expression: result
---
Ok(
    Struct {
        foo: -1133362929,
        bar: true,
    },
)
